# expiry-hawk

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.amd64  README.md
.github/workflows/: container-build.yaml
charts/: install-demo.sh  install-expiry-hawk.sh  uninstall-demo.sh  uninstall-expiry-hawk.sh
charts/demo/: values.yaml
charts/demo/templates/: deployment.yaml
charts/expiry-hawk/: Chart.yaml  values.yaml
charts/expiry-hawk/templates/: _helpers.tpl  dashboard.yaml  dashboards.yaml  deployment.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
src/: main.rs
