[package]
name = "expiry-hawk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
futures = "0.3.28"
hyper = "0.14.27"
k8s-openapi = { version = "0.20.0", features = ["v1_26"] }
kube = { version = "0.86.0", features = ["runtime", "derive"] }
lazy_static = "1.4.0"
prometheus = "0.13.3"
tokio = { version = "1.14.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
